--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http": "^0.0.1-security",
     "mongodb": "^6.21.0",
     "nodemailer": "^7.0.11",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "resend": "^6.6.0"
   }
 }
